--- a/notebook/analisis_sentiment_film_merahputih_oneforall.ipynb
+++ b/notebook/analisis_sentiment_film_merahputih_oneforall.ipynb
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "c707ddf9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('smerahputih_oneforall.csv')"
+    "data = pd.read_csv('../data/smerahputih_oneforall.csv')"
    ]
   },
   {
