--- a/notebook/scraping_comment_ytb.ipynb
+++ b/notebook/scraping_comment_ytb.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "64293e62",
    "metadata": {},
    "outputs": [
@@ -4894,7 +4894,7 @@
     }
    ],
    "source": [
-    "api_key = 'AIzaSyDr5irwiXbANpPFi7pBD7MSvoFyW1glFqQ'\n",
+    "api_key = 'API KEY'\n",
     "\n",
     "# https://www.youtube.com/watch?v=ORu80EfjEkg\n",
     "video_id = 'ORu80EfjEkg'\n",
@@ -7570,7 +7570,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nama_file_csv = \"smerahputih_oneforall.csv\"\n",
+    "nama_file_csv = \"../data/smerahputih_oneforall.csv\"\n",
     "data_3.to_csv(nama_file_csv, index=False, encoding='utf-8')"
    ]
   }
