Dibuat menggunakan Colab

--- a/notebook/Proses_data_new.ipynb
+++ b/notebook/Proses_data_new.ipynb
@@ -6455,12 +6455,237 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "x = data['stemming']\n",
+        "y = data['sentiment']\n",
+        "\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42, stratify=y)"
+      ],
       "metadata": {
         "id": "8jiKnDmIBLVS"
       },
+      "execution_count": 224,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_test.value_counts()"
+      ],
+      "metadata": {
+        "id": "M3CJtd3MLKLa",
+        "outputId": "2b0ce523-0178-4644-c102-2148fdfcc7cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        }
+      },
+      "execution_count": 227,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "sentiment\n",
+              "Negatif    607\n",
+              "Positif    296\n",
+              "Name: count, dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>sentiment</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Negatif</th>\n",
+              "      <td>607</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Positif</th>\n",
+              "      <td>296</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 227
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.metrics import accuracy_score, precision_score, confusion_matrix, classification_report, precision_recall_curve\n",
+        "import numpy as np\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer"
+      ],
+      "metadata": {
+        "id": "9zFRTzoELPHC"
+      },
+      "execution_count": 231,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vectorizer = TfidfVectorizer()\n",
+        "x_train_vectorized = vectorizer.fit_transform(x_train)\n",
+        "x_test_vectorized = vectorizer.transform(x_test)"
+      ],
+      "metadata": {
+        "id": "nVb_gK44OLlT"
+      },
+      "execution_count": 232,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "u2r7kfq_QN5j",
+        "outputId": "add3556d-2e7d-4e4e-f956-7444b21f6f45",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 239,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
+              "\twith 18121 stored elements and shape (3610, 4389)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 239
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('matriks vektorisasi untuk data train')\n",
+        "print(x_train_vectorized.toarray())"
+      ],
+      "metadata": {
+        "id": "3mq2RjnUOZaK",
+        "outputId": "be61579e-9d3d-4b3b-ddbd-5c2193dc4649",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 233,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "matriks vektorisasi untuk data train\n",
+            "[[0. 0. 0. ... 0. 0. 0.]\n",
+            " [0. 0. 0. ... 0. 0. 0.]\n",
+            " [0. 0. 0. ... 0. 0. 0.]\n",
+            " ...\n",
+            " [0. 0. 0. ... 0. 0. 0.]\n",
+            " [0. 0. 0. ... 0. 0. 0.]\n",
+            " [0. 0. 0. ... 0. 0. 0.]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "e5nDjxE_d-wH"
+      },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "classifier = {\n",
+        "    \"Decision Tree\": DecisionTreeClassifier(random_state=42),\n",
+        "    \"Logistic Regression\": LogisticRegression(random_state=42),\n",
+        "    \"Random Forest\": RandomForestClassifier(random_state=42, n_estimators=100),\n",
+        "    \"SVM\": SVC(random_state=42),\n",
+        "    \"KNN\": KNeighborsClassifier(n_neighbors=5,metric='euclidean')\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "uF_YmTo5L5nJ"
+      },
+      "execution_count": 237,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n_classifiers = len(classifier)\n",
+        "\n",
+        "for index, (name, classifier) in enumerate(classifier.items()):\n",
+        "    classifier.fit(x_train_vectorized, np.ravel(y_train))\n",
+        "    y_pred = classifier.predict(x_test_vectorized)\n",
+        "    accuracy = accuracy_score(y_test, y_pred)\n",
+        "    print(f\"accuracy (train) for : {name, accuracy*100}\")\n",
+        "    print(classification_report(y_test, y_pred))"
+      ],
+      "metadata": {
+        "id": "cCZCxowFNLj9",
+        "outputId": "057fcd50-cf89-4a9f-fe42-3a64242b6772",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        }
+      },
+      "execution_count": 241,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "object of type 'DecisionTreeClassifier' has no len()",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3792285452.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mn_classifiers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclassifier\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclassifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mclassifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train_vectorized\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test_vectorized\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: object of type 'DecisionTreeClassifier' has no len()"
+          ]
+        }
+      ]
     }
   ]
 }
