--- a/notebook/Proses_data_new.ipynb
+++ b/notebook/Proses_data_new.ipynb
@@ -8321,7 +8321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 384,
+      "execution_count": 385,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -8354,10 +8354,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 387,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['../model/sentiment_model.pkl']"
+            ]
+          },
+          "execution_count": 387,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import joblib\n",
+        "\n",
+        "joblib.dump((randomized_search, y), '../model/sentiment_model.pkl')"
+      ]
     },
     {
       "cell_type": "code",
