update model lagi

--- a/notebook/Proses_data_new.ipynb
+++ b/notebook/Proses_data_new.ipynb
@@ -9999,7 +9999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 322,
+      "execution_count": 323,
       "metadata": {},
       "outputs": [
         {
@@ -10008,7 +10008,7 @@
               "['../model/sentiment_model.pkl']"
             ]
           },
-          "execution_count": 322,
+          "execution_count": 323,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -10016,7 +10016,7 @@
       "source": [
         "import joblib\n",
         "\n",
-        "joblib.dump((grid_search.best_estimator_, y), '../model/sentiment_model.pkl')"
+        "joblib.dump((grid_search.best_estimator_, vectorizer, y), '../model/sentiment_model.pkl')"
       ]
     }
   ],
