--- a/notebook/scraping_comment_ytb.ipynb
+++ b/notebook/scraping_comment_ytb.ipynb
@@ -4894,7 +4894,7 @@
     }
    ],
    "source": [
-    "api_key = 'AIzaSyDr5irwiXbANpPFi7pBD7MSvoFyW1glFqQ'\n",
+    "api_key = 'API KEY'\n",
     "\n",
     "# https://www.youtube.com/watch?v=ORu80EfjEkg\n",
     "video_id = 'ORu80EfjEkg'\n",
